Fix stretched images in WebKit/Blink based browsers

--- a/photo-stack-front/src/stylesheets/mosaic.scss
+++ b/photo-stack-front/src/stylesheets/mosaic.scss
@@ -1,3 +1,7 @@
 .mosaic {
-	margin-top: 4rem;
+  margin-top: 4rem;
+}
+
+.mosaic img {
+  height: 100% !important;
 }
